--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -11,7 +11,8 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.9", "3.10"]
-        starter_name: ["mini-poetry"]
+        starter: ["."]
+        directory: ["mini-poetry"]
 
     steps:
       - name: Check out repository code
@@ -28,7 +29,7 @@ jobs:
           pip install kedro
 
       - name: Run kedro new
-        run: kedro new --starter ${{ matrix.starter_name }} --config tests/${{ matrix.starter_name }}/config.yml
+        run: kedro new --starter ${{ matrix.starter }} --directory ${{ matrix.directory }} --config tests/${{ matrix.starter_name }}/config.yml
 
       - name: Check that the project directory exists
         run: |
