--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.9", "3.10"]
-        starter: ["."]
+        starter: [".", "https://github.com/rnoxy/kedro-starters"]
         directory: ["mini-poetry"]
 
     steps:
@@ -29,7 +29,7 @@ jobs:
           pip install kedro
 
       - name: Run kedro new
-        run: kedro new --starter ${{ matrix.starter }} --directory ${{ matrix.directory }} --config tests/${{ matrix.starter_name }}/config.yml
+        run: kedro new --starter ${{ matrix.starter }} --directory ${{ matrix.directory }} --config tests/${{ matrix.starter }}/config.yml
 
       - name: Check that the project directory exists
         run: |
