--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -29,7 +29,7 @@ jobs:
           pip install kedro
 
       - name: Run kedro new
-        run: kedro new --starter ${{ matrix.starter }} --directory ${{ matrix.directory }} --config tests/${{ matrix.starter }}/config.yml
+        run: kedro new --starter ${{ matrix.starter }} --directory ${{ matrix.directory }} --config tests/${{ matrix.directory }}/config.yml
 
       - name: Check that the project directory exists
         run: |
