--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -11,7 +11,6 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.9", "3.10"]
-        starter: [".", "https://github.com/rnoxy/kedro-starters"]
         directory: ["mini-poetry"]
 
     steps:
@@ -31,9 +30,7 @@ jobs:
       - name: Run kedro new
         run:
           kedro new \
-            --starter ${{ matrix.starter }} \
-            --directory ${{ matrix.directory }} \
-            --checkout ${GITHUB_REF#refs/heads/} \
+            --starter ./${{ matrix.directory }} \
             --config tests/${{ matrix.directory }}/config.yml
 
       - name: Check that the project directory exists
