--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -28,10 +28,8 @@ jobs:
           pip install kedro
 
       - name: Run kedro new
-        run:
-          kedro new \
-            --starter ./${{ matrix.directory }} \
-            --config tests/${{ matrix.directory }}/config.yml
+        run: |
+          kedro new --starter ./${{ matrix.directory }} --config tests/${{ matrix.directory }}/config.yml
 
       - name: Check that the project directory exists
         run: |
