--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -30,7 +30,11 @@ jobs:
 
       - name: Run kedro new
         run: |
-          kedro new --starter ${{ matrix.starter }} --directory ${{ matrix.directory }} --checkout ${GITHUB_REF#refs/heads/} --config tests/${{ matrix.directory }}/config.yml
+          kedro new \
+            --starter ${{ matrix.starter }} \
+            --directory ${{ matrix.directory }} \
+            --checkout ${GITHUB_REF#refs/heads/} \
+            --config tests/${{ matrix.directory }}/config.yml
 
       - name: Check that the project directory exists
         run: |
