--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -35,22 +35,20 @@ jobs:
       - name: Show kedro info
         run: kedro info
 
-      - name: Run kedro new (local)
-        if: matrix.starter == '.'
+      - name: Run kedro new
         run: |
-          kedro new                                           \
-            --starter ${{ matrix.starter }}                   \
-            --directory ${{ matrix.directory }}               \
-            --config tests/${{ matrix.directory }}/config.yml
-
-      - name: Run kedro new (remote)
-        if: matrix.starter != '.'
-        run: |
-          kedro new                                           \
-            --starter ${{ matrix.starter }}                   \
-            --directory ${{ matrix.directory }}               \
-            --checkout ${{ matrix.branch_name }}              \
-            --config tests/${{ matrix.directory }}/config.yml
+          if [[ "${{ matrix.starter }}" == "." ]]; then
+            kedro new
+              --starter ${{ matrix.starter }}
+              --directory ${{ matrix.directory }}
+              --config tests/${{ matrix.directory }}/config.yml
+          else
+            kedro new
+              --starter ${{ matrix.starter }}
+              --directory ${{ matrix.directory }}
+              --checkout ${{ matrix.branch_name }}
+              --config tests/${{ matrix.directory }}/config.yml
+          fi
 
       - name: Check that the project directory exists
         run: |
