two steps (optional)

--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -38,18 +38,18 @@ jobs:
       - name: Run kedro new (local)
         if: matrix.starter == '.'
         run: |
-          kedro new
-            --starter ${{ matrix.starter }}
-            --directory ${{ matrix.directory }}
+          kedro new                                            \
+            --starter ${{ matrix.starter }}                    \
+            --directory ${{ matrix.directory }}                \
             --config tests/${{ matrix.directory }}/config.yml
 
       - name: Run kedro new (remote)
         if: matrix.starter != '.'
         run: |
-          kedro new
-            --starter ${{ matrix.starter }}
-            --directory ${{ matrix.directory }}
-            --checkout ${{ matrix.branch_name }}
+          kedro new                                            \
+            --starter ${{ matrix.starter }}                    \
+            --directory ${{ matrix.directory }}                \
+            --checkout ${{ matrix.branch_name }}               \
             --config tests/${{ matrix.directory }}/config.yml
 
       - name: Check that the project directory exists
