add test build poetry install

--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -99,12 +99,12 @@ jobs:
           pip install kedro==${{ matrix.kedro-init-version }}
 
       - name: Init kedro project
-        run: kedro new --starter ./{{ matrix.directory }} --config tests/${{ matrix.directory }}/config.yml
+        run: kedro new --starter {{ matrix.directory }} --config tests/${{ matrix.directory }}/config.yml
 
       - name: Change directory
         run: cd test-project
 
-      - name: Install dependencies
+      - name: Install dependencies with poetry
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry
