--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -101,10 +101,8 @@ jobs:
       - name: Init kedro project
         run: kedro new --starter ./${{ matrix.directory }} --config tests/${{ matrix.directory }}/config.yml
 
-      - name: Change directory
-        run: cd test-project
-
       - name: Install dependencies with poetry
+        working-directory: test-project
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry
