--- a/mini-poetry/{{ cookiecutter.repo_name }}/pyproject.toml
+++ b/mini-poetry/{{ cookiecutter.repo_name }}/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api
+build-backend = "poetry.core.masonry.api"
 
 [tool.kedro]
 package_name = "{{ cookiecutter.python_package }}"
