--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -41,7 +41,8 @@ jobs:
           kedro new                                            \
             --starter ${{ matrix.starter }}                    \
             --directory ${{ matrix.directory }}                \
-            --config tests/${{ matrix.directory }}/config.yml
+            --config tests/${{ matrix.directory }}/config.yml  \
+            --verbose
 
       - name: Run kedro new (remote)
         if: matrix.starter != '.'
@@ -50,7 +51,8 @@ jobs:
             --starter ${{ matrix.starter }}                    \
             --directory ${{ matrix.directory }}                \
             --checkout ${{ matrix.branch_name }}               \
-            --config tests/${{ matrix.directory }}/config.yml
+            --config tests/${{ matrix.directory }}/config.yml  \
+            --verbose
 
       - name: Check that the project directory exists
         run: |
