--- a/mini-poetry/{{ cookiecutter.repo_name }}/pyproject.toml
+++ b/mini-poetry/{{ cookiecutter.repo_name }}/pyproject.toml
@@ -17,7 +17,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.11"
+python = ">=3.8.1"
 kedro = "^{{ cookiecutter.kedro_version }}"
 kedro-datasets = "^1.0.0"
 
