--- a/mini-poetry/{{ cookiecutter.repo_name }}/conf/base/catalog.yml
+++ b/mini-poetry/{{ cookiecutter.repo_name }}/conf/base/catalog.yml
@@ -41,3 +41,7 @@
 #
 # This is a data set used by the "Hello World" example pipeline provided with the project
 # template. Please feel free to remove it once you remove the example pipeline.
+
+raw_data:
+  type: pandas.CSVDataSet
+  filepath: data/01_raw/data.csv
