--- a/mini-poetry/{{ cookiecutter.repo_name }}/conf/base/catalog.yml
+++ b/mini-poetry/{{ cookiecutter.repo_name }}/conf/base/catalog.yml
@@ -48,5 +48,5 @@ test_data:
   load_args:
       sep: ","
       index_col: 0
-      parse_dates:
-        - date
+#      parse_dates:
+#        - date
