--- a/.github/workflows/test-kedro-new.yml
+++ b/.github/workflows/test-kedro-new.yml
@@ -111,7 +111,7 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry
           poetry config virtualenvs.create false
-          poetry install
+          poetry install --with test
 
       - name: Run kedro
         working-directory: test-project
