--- a/mini-poetry/{{ cookiecutter.repo_name }}/.envrc
+++ b/mini-poetry/{{ cookiecutter.repo_name }}/.envrc
@@ -7,5 +7,5 @@
 eval "$(conda shell.zsh hook)"
 conda activate {{ cookiecutter.project_name }}
 
-# This helps to open lot of files in Mac OS
+# Sometimes, in Mac OS, you may need to increase the number of open files.
 ulimit -n 1024
